# MOEX-Agent-MCP

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  cases.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini
architecture/: index.md
docs/: 12.12.25.ARHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_HIGH_LEVEL.md  ARCHITECTURE_LOW_LEVEL.md  EVOLUTION_DEPLOY.md  INTERVIEW_PREPARATION.md  PROJECT_AUDIT.md  REQUIREMENTS.md  REQUIREMENTS_moex-market-analyst-agent.md  SCENARIOS_PORTFOLIO_RISK.md  SPEC_moex-iss-mcp.md  SPEC_moex_iss_sdk_draft.md  SPEC_risk-analytics-mcp.md  SPEC_risk_dashboard_agi_ui.md  c4_level_1_system_context.md  c4_level_3_component_ai_agent.md  c4_level_3_component_mcp_moex.md  c4_level_4_code_ai_agent.md  c4_level_4_code_mcp_moex.md  mentor_feedback.md  q&a.md  structured_output.md
moex_iss_mcp/: Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  domain_calculations.py  env_options.json  error_mapper.py  main.py  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  models.py  server.py  tools.json
moex_iss_sdk/: __init__.py  client.py  endpoints.py  error_mapper.py  exceptions.py  models.py  utils.py
risk_analytics_mcp/: Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  env_options.json  main.py  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  server.py  tools.json
tasks/: SCENARIOS-5-7-9-priority.md  TASK-2025-001-phase-0-foundation-and-fm-stack.md  TASK-2025-002-phase-1-mcp-core.md  TASK-2025-004-phase-3-infra-and-deploy.md  TASK-2025-005-phase-4-rag-mcp-phase-1.md  TASK-2025-006-phase-5-web-ui.md  TASK-2025-007-phase-6-extended-tools-and-portfolio.md  (+97 more)
tests/: conftest.py  (+34 more)
(+171 files in other folders)
