[project]
name = "moex_iss_sdk"
version = "0.0.1"
description = "Typed MOEX ISS client shared by MCP servers."
authors = [{ name = "team-moex-agent" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3",
    "fastmcp>=2.13.3,<3",
    "python-dotenv>=1.0,<2",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.24.0,<2",
    "opentelemetry-sdk>=1.24.0,<2",
    "opentelemetry-exporter-otlp>=1.24.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "import-linter>=1.12,<3",
]

[tool.setuptools.packages.find]
where = ["."]
